reload viewer event name

--- a/public/main/data/appstate.json
+++ b/public/main/data/appstate.json
@@ -1,1 +1,1 @@
-{"currentSketch":{"name":"5baf6d7a-a07e-4f36-808b-aa7fa34bd7e9.js","dir":"temp"}}
+{"currentSketch":{"dir":"derived","name":"a35fd61d-5db6-48b6-99bc-c5cc978bc36d"}}
