add sketches list page

--- a/public/main/data/appstate.json
+++ b/public/main/data/appstate.json
@@ -1,1 +1,1 @@
-{"currentSketch":{"dir":"derived","name":"a35fd61d-5db6-48b6-99bc-c5cc978bc36d"}}
+{"currentSketch":{"dir":"initial","name":"circle_draw"}}
