layout for code view

--- a/public/main/data/appstate.json
+++ b/public/main/data/appstate.json
@@ -1,1 +1,1 @@
-{"currentSketch":{"dir":"initial","name":"circle_draw"}}
+{"currentSketch":{"name":"a305cbc9-1433-463a-8d31-32479d3d76c9.js","dir":"temp"}}
