--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/codemirror-theme-dracula": "^4.11.0",
     "@uiw/react-codemirror": "^4.9.4",
     "d3": "^7.5.0",
     "p5": "^1.4.1",
