--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "OpenSourceArt",
   "version": "0.1.0",
   "private": true,
+  "license": "CC BY-NC-SA 4.0",
   "dependencies": {
     "@codemirror/lang-javascript": "^6.0.0",
     "@testing-library/jest-dom": "^5.16.4",
