fix menos reload quando salva arvore

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "serve": "concurrently -k \"cross-env BROWSER=none yarn start\" \"yarn electron:start\"",
     "electron:start": "wait-on tcp:3000 && electron .",
     "electron:build": "",
-    "purge-data": "rm -rf ./public/main/data/derived && rm -rf ./public/main/data/temp && rm ./public/main/data/appstate.json && rm ./public/main/data/sketchesGraphData.json",
+    "purge-data": "rm -rf ./public/main/data/derived && rm -rf ./public/main/data/temp && rm ./public/main/data/appstate.json && rm ./data/sketchesGraphData.json",
     "fresh-start": "yarn purge-data && yarn serve"
   },
   "eslintConfig": {
